refactor para java 8